--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp-uglify-es": "^3.0.0",
     "jsonwebtoken": "^9.0.1",
     "kue": "^0.11.6",
+    "mongodb": "^6.1.0",
     "mongoose": "^7.4.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
