--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "license": "ISC",
   "dependencies": {
     "connect-flash": "^0.1.1",
-    "connect-mongo": "^5.0.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -47,6 +46,7 @@
   "devDependencies": {
     "gulp": "^4.0.2",
     "gulp-imagemin": "^7.1.0",
-    "gulp-rev": "^10.0.0"
+    "gulp-rev": "^10.0.0",
+    "nodemon": "^3.0.1"
   }
 }
